Fix broken style images

--- a/styles/site/layout/_cta.scss
+++ b/styles/site/layout/_cta.scss
@@ -34,7 +34,7 @@
 		bottom: calc(50% - 155px);
 		width: 155px;
 		height: 150px;
-		background-image: url('../images/cta-illustration.svg');
+		background-image: url('/static/images/cta-illustration.svg');
 		background-repeat: no-repeat;
 	}
 
