--- a/styles/site/layout/_features.scss
+++ b/styles/site/layout/_features.scss
@@ -15,7 +15,7 @@
 			left: 0;
 			width: 76px;
 			height: 85px;
-			background-image: url('../images/features-quote-illustration.svg');
+			background-image: url('/static/images/features-quote-illustration.svg');
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			z-index: -1
