--- a/styles/site/layout/_hero.scss
+++ b/styles/site/layout/_hero.scss
@@ -22,7 +22,7 @@
 		left: calc(50% - 320px);
 		width: 640px;
 		height: 136px;
-		background-image: url('../images/hero-illustration.svg');
+		background-image: url('/static/images/hero-illustration.svg');
 		background-size: 640px 136px;
 		background-repeat: no-repeat;
 		z-index: -1;
